@@ -1,6 +1,8 @@
 2021-05-28 Jan Kotanski <jankotan@gmail.com>
 	* add common.blockitem_add, common.blockitem_addint, common.blockitem_rm to pyeval
 	* add cleaning in lambdavds description
+	* add move lambda datasources to pyeval
+	* add move pilatus datasources to pyeval
 	* tagged as v3.9.0
 
 2021-05-21 Jan Kotanski <jankotan@gmail.com>
